translation on partial script

--- a/e7-lab-team-optimizer/index.html
+++ b/e7-lab-team-optimizer/index.html
@@ -45,8 +45,8 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/e7-damage-calc/index.html">Damage Calc</a></li>
-                <li class='active'><a href="/e7-lab-team-optimizer/index.html">Lab Team Optimizer</a></li>
+                <li><a>傷害計算</a></li>
+                <li class='active'><a href="/e7-lab-team-optimizer/index.html">迷宮最佳化組隊</a></li>
             </ul>
             </div>
         </div>
@@ -106,7 +106,7 @@
             <div class="col-md-4">
                 <br>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Roster (min. 4 heroes)</div>
+                    <div class="panel-heading text-center">清單 (最少需4名)</div>
                     <div class="panel-body" style='height: 300px; overflow-y: scroll;' id='roster-output'>
                     </div>
                 </div>
