--- a/e7-lab-team-optimizer/index.html
+++ b/e7-lab-team-optimizer/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>E7 Labyrinth Team Optimizer</title>
+    <title>第七史詩迷宮組隊最佳化</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
@@ -60,18 +60,18 @@
                 如果你找到 bug 請聯絡作者 discord: <strong class='text-info'>budandan#1947</strong>.
             </p>
             <div class="col-md-4 col-md-offset-4">
-                <span id='changelog' style="cursor: pointer;" onclick='toggleChangelog()'><i class="fas fa-caret-right"></i> 顯示修改記錄</span>
+                <span id='changelog' style="cursor: pointer;" onclick='toggleChangelog()'><i class="fas fa-caret-right"></i> 顯示日誌</span>
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <ul>
-                        <li><b>v1.8:</b> (06/04/19) Adds Luluca, Fallen Cecilia and Angelic Montmorancy.</li>
-                        <li><b>v1.8:</b> (05/08/19) Adds Dizzy.</li>
-                        <li><b>v1.7.4:</b> (05/07/19) Adds a mobile friendly, searchable dropdown hero menu. (Credit to tomhero#3389)</li>
-                        <li><b>v1.7.3:</b> (05/07/19) Fixes a bug where the user could not delete some heroes with spaces in their names. (Credit to Jay#0462)</li>
-                        <li><b>v1.7.2:</b> (05/02/19) Adds Baiken, Crescent Moon Rin, Sol and Sage B&S.</li>
-                        <li><b>v1.6.1:</b> (04/28/19) Fixes Yuna's Heroic Cheer value.</li>
-                        <li><b>v1.6:</b> (04/27/19) Adds "Find my Fourth" with three locked heroes.</li>
-                        <li><b>v1.5:</b> (04/26/19) Adds hero locking feature</li>
+                        <li><b>v1.8:</b> (06/04/19) 增加璐璐卡、墮落的賽斯莉雅以及守護天使蒙茉朗西</li>
+                        <li><b>v1.8:</b> (05/08/19) 增加蒂姬</li>
+                        <li><b>v1.7.4:</b> (05/07/19) 新增手機友善版本，搜尋下拉式選單 (Credit to tomhero#3389)</li>
+                        <li><b>v1.7.3:</b> (05/07/19) 修正問題，當英雄名稱有空白時會無法移除 (Credit to Jay#0462)</li>
+                        <li><b>v1.7.2:</b> (05/02/19) 新增梅瑄、新月舞姬玲兒、索爾以及賢者巴爾塞尚</li>
+                        <li><b>v1.6.1:</b> (04/28/19) 新增尤娜的英雄式助陣數值</li>
+                        <li><b>v1.6:</b> (04/27/19) 新增"找第四位!"當有三個鎖定英雄時</li>
+                        <li><b>v1.5:</b> (04/26/19) 新增鎖定英雄功能</li>
                         <li><b>v1.4:</b> (04/26/19) Initial Reddit launch. Data is current up to Cermia.</li>
                     </ul>
                     <br>
@@ -80,7 +80,7 @@
         </div>
         <div class="row text-center">
             <div class="col-md-4 col-md-offset-4">
-                <span id='instructions' style="cursor: pointer;" onclick='toggleInstructions()'><i class="fas fa-caret-right"></i> 顯示導引</span>
+                <span id='instructions' style="cursor: pointer;" onclick='toggleInstructions()'><i class="fas fa-caret-right"></i> 顯示說明</span>
                 <div id="instructions-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <p>
@@ -158,10 +158,10 @@
             <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">這是最佳四人組..</h4>
+                <h4 class="modal-title">最適合的第四位英雄</h4>
             </div>
             <div class="modal-body">
-                <p class='text-danger' style='font-size: 0.8em;'>You cannot have a Specialty Change hero and its original form on the same team. Please disregard these teams; removing them is part of my future work on this calc.</p>
+                <p class='text-danger' style='font-size: 0.8em;'>請注意，你無法讓轉職英雄與他之前的樣子在同一個隊伍中，請不要考慮那一種組合，未來作者會移除這種隊伍。</p>
                 <table class='table table-striped'>
                     <tr>
                         <th></th>
