--- a/e7-lab-team-optimizer/index.html
+++ b/e7-lab-team-optimizer/index.html
@@ -59,6 +59,9 @@
             <p class='text-center' style='font-size: 0.7em;'>
                 如果你找到 bug 請聯絡作者 discord: <strong class='text-info'>budandan#1947</strong>.
             </p>
+			<p class='text-center' style='font-size: 0.7em;'>
+			    原作者網頁 Author Original Page: <a href="https://budandan.github.io/e7-lab-team-optimizer/">https://github.com/budandan/budandan.github.io</a>
+			</p>
             <div class="col-md-4 col-md-offset-4">
                 <span id='changelog' style="cursor: pointer;" onclick='toggleChangelog()'><i class="fas fa-caret-right"></i> 顯示日誌</span>
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
