--- a/e7-lab-team-optimizer/index.html
+++ b/e7-lab-team-optimizer/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row text-center">
             <h4>
-                第七史詩迷宮組隊最佳化 v1.9 (作者 Luluca) (翻譯 Josh Hsu)
+                第七史詩迷宮組隊最佳化 v1.9 (海邊的維爾蘿娜) (翻譯 Josh Hsu)
             </h4>
             <p class='text-center' style='font-size: 0.7em;'>
                 如果你找到 bug 請聯絡作者 discord: <strong class='text-info'>budandan#1947</strong>.
@@ -67,6 +67,7 @@
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <ul>
+			<li><b>v1.9:</b> (08/07/19) 增加海邊的維爾蘿娜</li>
                         <li><b>v1.8:</b> (06/04/19) 增加璐璐卡、墮落的賽斯莉雅以及守護天使蒙茉朗西</li>
                         <li><b>v1.8:</b> (05/08/19) 增加蒂姬</li>
                         <li><b>v1.7.4:</b> (05/07/19) 新增手機友善版本，搜尋下拉式選單 (Credit to tomhero#3389)</li>
