--- a/e7-lab-team-optimizer/index.html
+++ b/e7-lab-team-optimizer/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row text-center">
             <h4>
-                第七史詩迷宮組隊最佳化 v1.9.1 (薇薇安) (翻譯 Josh Hsu)
+                第七史詩迷宮組隊最佳化 v1.9.2 (莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 由貝烏斯與仁慈的洛曼) (翻譯 Josh Hsu)
             </h4>
             <p class='text-center' style='font-size: 0.7em;'>
                 如果你找到 bug 請聯絡作者 discord: <strong class='text-info'>budandan#1947</strong>.
@@ -67,7 +67,7 @@
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <ul>
-                        <li><b>v1.9.1:</b> (08/29/19) 增加薇薇安與末日蘿菲</li>
+                        <li><b>v1.9.2:</b> (08/29/19) 增加莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 由貝烏斯與仁慈的洛曼</li>
 			            <li><b>v1.9:</b> (08/07/19) 增加海邊的維爾蘿娜</li>
                         <li><b>v1.8:</b> (06/04/19) 增加璐璐卡、墮落的賽斯莉雅以及守護天使蒙茉朗西</li>
                         <li><b>v1.8:</b> (05/08/19) 增加蒂姬</li>
