update to version 1.9.3

--- a/lab/index.html
+++ b/lab/index.html
@@ -67,7 +67,8 @@
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <ul>
-                        <li><b>v1.9.2:</b> (08/29/19) 增加莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 由貝烏斯與仁慈的洛曼</li>
+                        <li><b>v1.9.3:</b> (01/16/20) 增加疑難雜症專家汪達與先鋒隊長里柯黎司</li>
+			            <li><b>v1.9.2:</b> (01/16/20) 增加莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 由貝烏斯與仁慈的洛曼</li>
 			            <li><b>v1.9:</b> (08/07/19) 增加海邊的維爾蘿娜</li>
                         <li><b>v1.8:</b> (06/04/19) 增加璐璐卡、墮落的賽斯莉雅以及守護天使蒙茉朗西</li>
                         <li><b>v1.8:</b> (05/08/19) 增加蒂姬</li>
