--- a/lab/index.html
+++ b/lab/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row text-center">
             <h4>
-                第七史詩迷宮組隊最佳化 v1.9.4 (增加終結者杰拉圖)
+                第七史詩迷宮組隊最佳化 v1.9.4 (增加終結者杰拉圖 帕貝爾)
             </h4>
             <p class='text-center' style='font-size: 0.7em;'>
                 如果你找到 bug 請聯絡作者 discord: <strong class='text-info'>budandan#1947</strong>.
@@ -67,7 +67,7 @@
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <ul>
-                        <li><b>v1.9.4:</b> (01/19/20) 增加終結者杰拉圖</li>
+                        <li><b>v1.9.4:</b> (01/19/20) 增加終結者杰拉圖與帕貝爾</li>
                         <li><b>v1.9.3:</b> (01/19/20) 增加疑難雜症專家汪達與先鋒隊長里柯黎司</li>
 			            <li><b>v1.9.2:</b> (01/16/20) 增加莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 由貝烏斯與仁慈的洛曼</li>
 			            <li><b>v1.9:</b> (08/07/19) 增加海邊的維爾蘿娜</li>
