update to version 2020-11-04

--- a/lab/index.html
+++ b/lab/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91600334-2"></script>
@@ -54,7 +54,12 @@
     <div class="container">
         <div class="row text-center">
             <h4>
-                第七史詩迷宮組隊最佳化 v1.9.5 (增加羅安納 年輕的女王夏綠蒂 卡威利 無神論者麗迪卡 賽瑞絲 野心份子泰溫 帕貝爾)
+                第七史詩迷宮組隊最佳化 v1.9.5 (增加最後的騎士克勞烏 小泡芙 灰光森林的伊賽麗亞 度假風優芬妮
+                繆伊 殘影的菲奧雷托 瑟琳 永恆不變的戴莉亞
+                絆愛 雷伊 愛爾菲特 赤月的貴族海斯特 冒險家拉斯 罪戾的安潔莉卡
+                風雲蘇琳 自由自在的傭兵赫爾嘉 梅麗莎 雷娜
+                巴托斯 艾因茲 哈坦 流浪勇士雷歐 研究者卡蘿
+                混沌教屠殺追擊者 魔法學者朵莉思 最強模特兒璐璐卡 艾爾巴倫 蘭蒂)
             </h4>
 			<p class='text-center' style='font-size: 0.7em;'>
 			    原作者網頁 Author Original Page: <a href="https://budandan.github.io/e7-lab-team-optimizer/">https://github.com/budandan/budandan.github.io</a>
@@ -64,18 +69,28 @@
                 <div id="changelog-wrapper" class='text-left' style='display:none;'>
                     <br>
                     <ul>
-                        <li><b>v1.9.4:</b> (05/23/20) 增加羅安納 年輕的女王夏綠蒂 卡威利 無神論者麗迪卡 賽瑞絲 野心份子泰溫 帕貝爾</li>
+                        
+                        <li><b>Database from </b> (11/04/20) https://epicsevendb.com/ </li>
+                        <li>
+                            <b>v1.9.6:</b> (11/04/20) 增加最後的騎士克勞烏 小泡芙 灰光森林的伊賽麗亞 度假風優芬妮
+                            繆伊 殘影的菲奧雷托 瑟琳 永恆不變的戴莉亞
+                            絆愛 雷伊 愛爾菲特 赤月的貴族海斯特 冒險家拉斯 罪戾的安潔莉卡
+                            風雲蘇琳 自由自在的傭兵赫爾嘉 梅麗莎 雷娜
+                            巴托斯 艾因茲 哈坦 流浪勇士雷歐 研究者卡蘿
+                            混沌教屠殺追擊者 魔法學者朵莉思 最強模特兒璐璐卡 艾爾巴倫 蘭蒂
+                        </li>
+                        <li><b>v1.9.5:</b> (05/23/20) 增加羅安納 年輕的女王夏綠蒂 卡威利 無神論者麗迪卡 賽瑞絲 野心份子泰溫 帕貝爾</li>
                         <li><b>v1.9.4:</b> (01/19/20) 增加終結者杰拉圖與帕貝爾</li>
                         <li><b>v1.9.3:</b> (01/19/20) 增加疑難雜症專家汪達與先鋒隊長里柯黎司</li>
-			            <li><b>v1.9.2:</b> (01/16/20) 增加莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 由貝烏斯與仁慈的洛曼</li>
-			            <li><b>v1.9:</b> (08/07/19) 增加海邊的維爾蘿娜</li>
+                        <li><b>v1.9.2:</b> (01/16/20) 增加莉莉貝 艾蓮西雅 艾蕾娜 莉莉亞斯 沙漠寶石巴薩爾 不法之徒克羅澤 尤貝烏斯與仁慈的洛曼</li>
+                        <li><b>v1.9:</b> (08/07/19) 增加海邊的維爾蘿娜</li>
                         <li><b>v1.8:</b> (06/04/19) 增加璐璐卡、墮落的賽斯莉雅以及守護天使蒙茉朗西</li>
                         <li><b>v1.8:</b> (05/08/19) 增加蒂姬</li>
                         <li><b>v1.7.4:</b> (05/07/19) 新增手機友善版本，搜尋下拉式選單 (Credit to tomhero#3389)</li>
                         <li><b>v1.7.3:</b> (05/07/19) 修正問題，當英雄名稱有空白時會無法移除 (Credit to Jay#0462)</li>
                         <li><b>v1.7.2:</b> (05/02/19) 新增梅瑄、新月舞姬玲兒、索爾以及賢者巴爾塞尚</li>
                         <li><b>v1.6.1:</b> (04/28/19) 新增尤娜的英雄式助陣數值</li>
-                        <li><b>v1.6:</b> (04/27/19) 新增"找第四位!"當有三個鎖定英雄時</li>
+                        <li><b>v1.6:</b> (04/27/19) 新增"找第四位!"可用於有三個鎖定英雄，找到第四位最佳隊員</li>
                         <li><b>v1.5:</b> (04/26/19) 新增鎖定英雄功能</li>
                         <li><b>v1.4:</b> (04/26/19) Initial Reddit launch. Data is current up to Cermia.</li>
                     </ul>
