update to version 1.9.7

--- a/lab/index.html
+++ b/lab/index.html
@@ -54,12 +54,10 @@
     <div class="container">
         <div class="row text-center">
             <h4>
-                第七史詩迷宮組隊最佳化 v1.9.5 (增加最後的騎士克勞烏 小泡芙 灰光森林的伊賽麗亞 度假風優芬妮
-                繆伊 殘影的菲奧雷托 瑟琳 永恆不變的戴莉亞
-                絆愛 雷伊 愛爾菲特 赤月的貴族海斯特 冒險家拉斯 罪戾的安潔莉卡
-                風雲蘇琳 自由自在的傭兵赫爾嘉 梅麗莎 雷娜
-                巴托斯 艾因茲 哈坦 流浪勇士雷歐 研究者卡蘿
-                混沌教屠殺追擊者 魔法學者朵莉思 最強模特兒璐璐卡 艾爾巴倫 蘭蒂)
+                第七史詩迷宮組隊最佳化 v1.9.7 (史瑞杰思 烈焰的卡瓦朱 伊莉娜芙 協調者卡威利
+                賽娜 雪國的蘇莉塔妮亞 暴擊型卡農 大族長卡瓦娜 繆斯黎瑪 艾妲
+                設計師莉莉貝 露西 佛里蒂絲 魔神的暗影 傳道者卡麥蘿茲 童話泰妮布里雅
+                魔勒 操作員賽珂蘭特 芙蘭)
             </h4>
 			<p class='text-center' style='font-size: 0.7em;'>
 			    原作者網頁 Author Original Page: <a href="https://budandan.github.io/e7-lab-team-optimizer/">https://github.com/budandan/budandan.github.io</a>
@@ -71,6 +69,12 @@
                     <ul>
                         
                         <li><b>Database from </b> (11/04/20) https://epicsevendb.com/ </li>
+                        <li>
+                            <b>v1.9.7:</b> (07/25/21) 增加史瑞杰思 烈焰的卡瓦朱 伊莉娜芙 協調者卡威利
+                            賽娜 雪國的蘇莉塔妮亞 暴擊型卡農 大族長卡瓦娜 繆斯黎瑪 艾妲
+                            設計師莉莉貝 露西 佛里蒂絲 魔神的暗影 傳道者卡麥蘿茲 童話泰妮布里雅
+                            魔勒 操作員賽珂蘭特 芙蘭
+                        </li>
                         <li>
                             <b>v1.9.6:</b> (11/04/20) 增加最後的騎士克勞烏 小泡芙 灰光森林的伊賽麗亞 度假風優芬妮
                             繆伊 殘影的菲奧雷托 瑟琳 永恆不變的戴莉亞
@@ -202,6 +206,7 @@
         </div>
     </div>
     <script src="data19.js"></script>
+    <script src="data21.js"></script>
     <script src="combinations.js"></script>
     <script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
     <script src="script.js"></script>
