--- a/joshautomation/info.html
+++ b/joshautomation/info.html
@@ -4,6 +4,8 @@ xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
+<meta charset="utf-8">
+
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=big5">
 <meta name=ProgId content=Word.Document>
